--- a/debian/rules
+++ b/debian/rules
@@ -86,7 +86,7 @@ binary-indep:	build
 binary-arch:	build
 	dh_testdir
 	dh_testroot
-	dh_clean -k
+	dh_prep
 	rm -rf debian/tmp debian/xscreensaver debian/xscreensaver-gl \
 		debian/xscreensaver-gnome debian/xscreensaver-nognome \
 		debian/xscreensaver-data debian/xscreensaver-data-extra \
