--- a/debian/rules
+++ b/debian/rules
@@ -103,9 +103,9 @@ binary-arch:	build
 	for i in debian/tmp/usr/share/applications/screensavers/*; do \
 		cat debian/screensavers-desktop.stub >> $${i}; done
 	mv debian/tmp/usr/share/man/man6/xscreensaver-gl-helper.6x \
-		debian/tmp/usr/share/man/man1/xscreensaver-gl-helper.1
-	#Fixing header from 6 to 1
-	sed '1s/6x/1/' debian/tmp/usr/share/man/man1/xscreensaver-gl-helper.1 > man.tmp; mv man.tmp debian/tmp/usr/share/man/man1/xscreensaver-gl-helper.1
+	   debian/tmp/usr/share/man/man1/xscreensaver-gl-helper.1
+	# Change man header section from 6 to 1
+	sed -i '1s/6x/1/' debian/tmp/usr/share/man/man1/xscreensaver-gl-helper.1
 	dh_movefiles -a
 	dh_install -a
 	# Lists anything that was installed but not packaged
