--- a/debian/rules
+++ b/debian/rules
@@ -31,10 +31,10 @@ build-stamp:
 	    mv driver/XScreenSaver_Xm_ad.h driver/XScreenSaver_Xm_ad.h.upstream
 
 	# Configs files will be updated, so preserve originals
-	[ ! -f config.sub.upstream ] && \
+	[ -f config.sub.upstream ] || \
 	  mv config.sub config.sub.upstream && \
 	    cp /usr/share/misc/config.sub config.sub
-	[ ! -f config.guess.upstream ] && \
+	[ -f config.guess.upstream ] || \
 	  mv config.guess config.guess.upstream && \
 	    cp /usr/share/misc/config.guess config.guess
 
