Define the package split in one database file
The file debian/split-hacks.config has the format:
<hack> <binary package> <optional comment>

Empty lines or lines starting with # are ignored.

The script debian/split-hacks.sh (called from debian/rules)
processes the config file and moves files accordingly.

Thanks to Andrew Starr-Bochicchio for initial work.

--- a/debian/rules
+++ b/debian/rules
@@ -106,6 +106,7 @@ binary-arch:	build
 	   debian/tmp/usr/share/man/man1/xscreensaver-gl-helper.1
 	# Change man header section from 6 to 1
 	sed -i '1s/6x/1/' debian/tmp/usr/share/man/man1/xscreensaver-gl-helper.1
+	sh debian/split-hacks.sh
 	dh_movefiles -a
 	dh_install -a
 	# Lists anything that was installed but not packaged
