generate .desktop file for rubikblocks and add it to -gl-extra

--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -156,6 +156,7 @@ rocks	xscreensaver-data-extra
 rorschach	xscreensaver-data-extra
 rotzoomer	xscreensaver-data-extra
 rubik	xscreensaver-gl-extra
+rubikblocks	xscreensaver-gl-extra
 sballs	xscreensaver-gl-extra
 shadebobs	xscreensaver-data
 sierpinski3d	xscreensaver-gl
