generate .desktop file for surfaces and add it to -gl-extra

--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -176,6 +176,7 @@ starwars	xscreensaver-gl-extra
 stonerview	xscreensaver-gl
 strange	xscreensaver-data-extra
 substrate	xscreensaver-data-extra
+surfaces	xscreensaver-gl-extra
 superquadrics	xscreensaver-gl
 swirl	xscreensaver-data
 tangram	xscreensaver-gl-extra
