move sonar to xscreesaver-gl package

--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -162,7 +162,7 @@ sierpinski	xscreensaver-data-extra
 skytentacles	xscreensaver-gl-extra
 slidescreen	xscreensaver-data
 slip	xscreensaver-data-extra
-sonar	xscreensaver-data
+sonar	xscreensaver-gl
 speedmine	xscreensaver-data-extra
 spheremonics	xscreensaver-gl
 spotlight	xscreensaver-data-extra
