debian/xscreensaver-daemon.desktop: add Tryexec
since this file can be left behind (config file) even if the
xscreensaver package is removed.

--- a/debian/xscreensaver-daemon.desktop
+++ b/debian/xscreensaver-daemon.desktop
@@ -2,6 +2,7 @@
 Type=Application
 Encoding=UTF-8
 Name=XScreensaver
+TryExec=xscreensaver
 Exec=xscreensaver -nosplash
 NoDisplay=true
 #X-GNOME-Autostart-Phase=Application
