added new packages to split-hacks scripts

--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -24,7 +24,7 @@ bouncingcow	xscreensaver-gl-extra
 boxed	xscreensaver-gl-extra
 boxfit	xscreensaver-data-extra
 braid	xscreensaver-data-extra
-bsod	xscreensaver-data-extra
+bsod	xscreensaver-screensaver-bsod
 bubble3d	xscreensaver-gl
 bumps	xscreensaver-data-extra
 cage	xscreensaver-gl-extra
@@ -188,8 +188,8 @@ vermiculate	xscreensaver-data-extra
 vidwhacker	xscreensaver-data-extra
 voronoi	xscreensaver-gl
 wander	xscreensaver-data-extra
-webcollage-helper	xscreensaver-data-extra
-webcollage	xscreensaver-data-extra
+webcollage-helper	xscreensaver-screensaver-webcollage
+webcollage	xscreensaver-screensaver-webcollage
 whirlwindwarp	xscreensaver-data-extra
 wormhole	xscreensaver-data-extra
 xanalogtv	xscreensaver-data-extra
