--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: x11
 Priority: optional
 Maintainer: Jose Luis Rivas <ghostbar@debian.org>
 Uploaders: Tormod Volden <debian.tormod@gmail.com>
-Build-Depends: bc, debhelper (>= 7.0), fortune-mod, libgtk2.0-dev, libpam0g-dev (>= 0.72), libgl1-mesa-dev | libgl-dev, libglu1-mesa-dev | xlibmesa-glu-dev | libglu-dev, xutils-dev, libgnome2-dev, libxml2-dev, libglade2-dev, libjpeg62-dev, libgle-dev, intltool, autotools-dev, libx11-dev, libxext-dev, libxinerama-dev, libxmu-dev, libxpm-dev, libxrandr-dev, libxss-dev, libxt-dev, libxtst-dev, libxxf86misc-dev, libxxf86vm-dev, x11proto-core-dev, xbitmaps, quilt, gdm, libxss-dev, libxtst-dev, libxxf86misc-dev, ${misc:Depends}
+Build-Depends: bc, debhelper (>= 7.0), fortune-mod, libgtk2.0-dev, libpam0g-dev (>= 0.72), libgl1-mesa-dev | libgl-dev, libglu1-mesa-dev | xlibmesa-glu-dev | libglu-dev, xutils-dev, libgnome2-dev, libxml2-dev, libglade2-dev, libjpeg62-dev, libgle-dev, intltool, autotools-dev, libx11-dev, libxext-dev, libxinerama-dev, libxmu-dev, libxpm-dev, libxrandr-dev, libxss-dev, libxt-dev, libxtst-dev, libxxf86misc-dev, libxxf86vm-dev, x11proto-core-dev, xbitmaps, quilt, gdm, libxss-dev, libxtst-dev, libxxf86misc-dev
 Standards-Version: 3.8.3
 Homepage: http://www.jwz.org/xscreensaver/
 Vcs-git: git://git.debian.org/git/collab-maint/xscreensaver.git
@@ -11,7 +11,7 @@ Vcs-browser: http://git.debian.org/?p=collab-maint/xscreensaver.git;a=summary
 
 Package: xscreensaver
 Architecture: any
-Depends: ${shlibs:Depends}, xscreensaver-data
+Depends: ${shlibs:Depends}, xscreensaver-data, ${misc:Depends}
 Conflicts: funny-manpages (<< 1.3-1), suidmanager (<< 0.50), xscreensaver-gnome (<< 4.09-2), xscreensaver-nognome (<< 4.09-2), gnome-control-center (<< 1:2)
 Recommends: xli | xloadimage, libjpeg-progs, perl5, miscfiles | wordlist
 Suggests: xfishtank, xdaliclock, xscreensaver-gl, fortune, www-browser, qcam | streamer
@@ -30,7 +30,7 @@ Description: Automatic screensaver for X
 
 Package: xscreensaver-data
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: xscreensaver
 Conflicts: xscreensaver (<< 5.04-3), kscreensaver-xsavers (<< 4:3.5.9-1)
 Replaces: xscreensaver (<< 5.04-3), gnome-screensaver (<< 2.15.4-0ubuntu1)
@@ -52,7 +52,7 @@ Description: data files to be shared among screensaver frontends
 
 Package: xscreensaver-data-extra
 Architecture: any
-Depends: ${shlibs:Depends}, xscreensaver-data (>= 5.04-3), dictionaries-common, libjpeg-progs, netpbm
+Depends: ${shlibs:Depends}, xscreensaver-data (>= 5.04-3), dictionaries-common, libjpeg-progs, netpbm, ${misc:Depends}
 Enhances: xscreensaver, gnome-screensaver
 Conflicts: xscreensaver (<< 5.04-3), kscreensaver-xsavers (<< 4:3.5.9-1)
 Replaces: xscreensaver (<< 5.04-3)
@@ -86,7 +86,7 @@ Description: data files to be shared among screensaver frontends
 
 Package: xscreensaver-gl
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: xscreensaver
 Conflicts: xscreensaver (<< 5.04-3)
 Replaces: xscreensaver-data (<< 5.10-3)
@@ -114,7 +114,7 @@ Description: GL(Mesa) screen hacks for xscreensaver
 
 Package: xscreensaver-gl-extra
 Architecture: any
-Depends: ${shlibs:Depends}, xscreensaver-gl (>= 5.04-3)
+Depends: ${shlibs:Depends}, xscreensaver-gl (>= 5.04-3), ${misc:Depends}
 Enhances: xscreensaver, gnome-screensaver
 Conflicts: xscreensaver (<< 5.04-3)
 Replaces: xscreensaver-gl (<< 5.04-3)
@@ -139,7 +139,7 @@ Description: GL(Mesa) screen hacks for xscreensaver
 
 Package: xscreensaver-screensaver-webcollage
 Architecture: any
-Depends: ${shlibs:Depends}, xscreensaver-data-extra
+Depends: ${shlibs:Depends}, xscreensaver-data-extra, ${misc:Depends}
 Conflicts: xscreensaver-data-extra (<< 5.10-4)
 Replaces: xscreensaver-data-extra (<< 5.10-4)
 Description: Webcollage hack from XScreenSaver
@@ -152,7 +152,7 @@ Description: Webcollage hack from XScreenSaver
 
 Package: xscreensaver-screensaver-bsod
 Architecture: any
-Depends: ${shlibs:Depends}, xscreensaver-data-extra
+Depends: ${shlibs:Depends}, xscreensaver-data-extra, ${misc:Depends}
 Conflicts: xscreensaver-data-extra (<< 5.10-4)
 Replaces: xscreensaver-data-extra (<< 5.10-4)
 Description: BSOD hack from XScreenSaver
