--- a/debian/xscreensaver-daemon.desktop
+++ b/debian/xscreensaver-daemon.desktop
@@ -5,6 +5,5 @@ Name=XScreensaver
 TryExec=xscreensaver
 Exec=xscreensaver -nosplash
 NoDisplay=true
-#X-GNOME-Autostart-Phase=Application
-#X-GNOME-Autostart-Notify=true
+# NotShowIn=KDE;GNOME;
 Comment=The XScreensaver daemon
