Drop Recommends on xli or xloadimage
This was done already in 4.05-2.1 but it sneaked back in again.

Since 4.08 xscreensaver-getimage does not rely on external viewers,
and uses gdk-pixbuf instead.

Contrary to its comments, vidwhacker uses xscreensaver-getimage and not
any other viewers. webcollage uses xscreensaver-getimage as first priority.

gdk-pixbuf is included in the build-dep libgtk2.0-dev.

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Package: xscreensaver
 Architecture: any
 Depends: ${shlibs:Depends}, xscreensaver-data, ${misc:Depends}
 Conflicts: funny-manpages (<< 1.3-1), suidmanager (<< 0.50), xscreensaver-gnome (<< 4.09-2), xscreensaver-nognome (<< 4.09-2), gnome-control-center (<< 1:2)
-Recommends: xli | xloadimage, libjpeg-progs, perl5, miscfiles | wordlist
+Recommends: libjpeg-progs, perl5, miscfiles | wordlist
 Suggests: xfishtank, xdaliclock, xscreensaver-gl, fortune, www-browser, qcam | streamer, gdm3 | kdm-gdmcompat
 Description: Automatic screensaver for X
  XScreenSaver is a modular screen saver and locker for X11,
