Generate desktop files for the new hacks
With the help of e.g:
$ debian/screensavers-desktop-qa.sh hacks/config/hilbert.xml

And add the hacks to debian/split-hacks.config

--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -33,6 +33,7 @@ ccurve	xscreensaver-data-extra
 celtic	xscreensaver-data-extra
 circuit	xscreensaver-gl
 cloudlife	xscreensaver-data-extra
+companioncube	xscreensaver-gl-extra
 compass	xscreensaver-data-extra
 coral	xscreensaver-data-extra
 crackberg	xscreensaver-gl-extra
@@ -90,6 +91,7 @@ greynetic	xscreensaver-data-extra
 halftone	xscreensaver-data-extra
 halo	xscreensaver-data-extra
 helix	xscreensaver-data-extra
+hilbert	xscreensaver-gl-extra
 hopalong	xscreensaver-data-extra
 hypertorus	xscreensaver-gl
 hypnowheel	xscreensaver-gl-extra
@@ -182,6 +184,7 @@ thornbird	xscreensaver-data-extra
 timetunnel	xscreensaver-gl-extra
 topblock	xscreensaver-gl
 triangle	xscreensaver-data-extra
+tronbit	xscreensaver-gl-extra
 truchet	xscreensaver-data-extra
 twang	xscreensaver-data-extra
 vermiculate	xscreensaver-data-extra
