--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,7 @@
 Source: xscreensaver
 Section: x11
 Priority: optional
-Maintainer: Jose Luis Rivas <ghostbar@debian.org>
-Uploaders: Tormod Volden <debian.tormod@gmail.com>
+Maintainer: Tormod Volden <debian.tormod@gmail.com>
 Build-Depends: bc, debhelper (>= 7.0), fortune-mod, libgtk2.0-dev, libpam0g-dev (>= 0.72), libgl1-mesa-dev | libgl-dev, libglu1-mesa-dev | xlibmesa-glu-dev | libglu-dev, xutils-dev, libxml2-dev, libglade2-dev, libjpeg-dev, libgle-dev, intltool, autotools-dev, libx11-dev, libxext-dev, libxinerama-dev, libxmu-dev, libxpm-dev, libxrandr-dev, libxss-dev, libxt-dev, libxtst-dev, libxxf86vm-dev, x11proto-core-dev, xbitmaps, quilt
 Standards-Version: 3.9.2
 Homepage: http://www.jwz.org/xscreensaver/
