Add hardening compile options
Get rid of the hardening-no-relro Lintian warnings.
The use of buildflags.mk requires dpkg-dev 1.16.1.

http://wiki.debian.org/Hardening

--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,10 @@
 # Including quilt.make
 include /usr/share/quilt/quilt.make
 
+# Includes hardening compile options
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/buildflags.mk
+
 export DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 export DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
