--- a/debian/rules
+++ b/debian/rules
@@ -16,6 +16,9 @@ include /usr/share/quilt/quilt.make
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/buildflags.mk
 
+# Provisional fix for LP #609451
+CFLAGS += -D_FILE_OFFSET_BITS=64
+
 export DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 export DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
