--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Depends: ${shlibs:Depends}, xscreensaver-data, ${misc:Depends}
 Conflicts: funny-manpages (<< 1.3-1), suidmanager (<< 0.50), xscreensaver-gnome (<< 4.09-2), xscreensaver-nognome (<< 4.09-2), gnome-control-center (<< 1:2)
 Recommends: libjpeg-progs, perl5, miscfiles | wordlist
 Suggests: xfishtank, xdaliclock, xscreensaver-gl, fortune, www-browser, qcam | streamer, gdm3 | kdm-gdmcompat
-Description: Automatic screensaver for X
+Description: Screensaver daemon and frontend for X11
  XScreenSaver is a modular screen saver and locker for X11,
  containing more than 200 screen savers.
  .
@@ -34,7 +34,7 @@ Suggests: xscreensaver
 Conflicts: xscreensaver (<< 5.04-3), kscreensaver-xsavers (<< 4:3.5.9-1)
 Replaces: xscreensaver (<< 5.04-3), gnome-screensaver (<< 2.15.4-0ubuntu1)
 Breaks: gnome-screensaver (<< 2.26), kscreensaver-xsaver (<= 4:4.2.4-1)
-Description: data files to be shared among screensaver frontends
+Description: Screen saver modules for screensaver frontends
  XScreenSaver is a modular screen saver and locker for X11,
  containing more than 200 screen savers.
  .
@@ -57,7 +57,7 @@ Enhances: xscreensaver, gnome-screensaver
 Conflicts: xscreensaver (<< 5.04-3), kscreensaver-xsavers (<< 4:3.5.9-1)
 Replaces: xscreensaver (<< 5.04-3)
 Breaks: gnome-screensaver (<< 2.26), kscreensaver-xsaver (<= 4:4.2.4-1)
-Description: data files to be shared among screensaver frontends
+Description: Extra screen saver modules for screensaver frontends
  XScreenSaver is a modular screen saver and locker for X11,
  containing more than 200 screen savers.
  .
@@ -91,7 +91,7 @@ Suggests: xscreensaver
 Conflicts: xscreensaver (<< 5.04-3)
 Replaces: xscreensaver-data (<< 5.10-3)
 Breaks: gnome-screensaver (<< 2.26), kscreensaver-xsaver (<= 4:4.2.4-1)
-Description: GL(Mesa) screen hacks for xscreensaver
+Description: GL(Mesa) screen saver modules for screensaver frontends
  XScreenSaver is a modular screen saver and locker for X11,
  containing more than 200 screen savers.
  .
@@ -118,7 +118,7 @@ Enhances: xscreensaver, gnome-screensaver
 Conflicts: xscreensaver (<< 5.04-3)
 Replaces: xscreensaver-gl (<< 5.04-3)
 Breaks: gnome-screensaver (<< 2.26), kscreensaver-xsaver (<= 4:4.2.4-1)
-Description: GL(Mesa) screen hacks for xscreensaver
+Description: Extra GL(Mesa) screen saver modules for screensaver frontends
  XScreenSaver is a modular screen saver and locker for X11,
  containing more than 200 screen savers.
  .
@@ -143,7 +143,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, xscreensaver-data-extra, ${misc:Depends}
 Conflicts: xscreensaver-data-extra (<< 5.10-4)
 Replaces: xscreensaver-data-extra (<< 5.10-4)
-Description: Webcollage hack from XScreenSaver
+Description: Webcollage screen saver module from XScreenSaver
  This package ships the hack webcollage which displays images from random 
  web searches on the Internet.
  .
@@ -156,7 +156,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, xscreensaver-data-extra, ${misc:Depends}
 Conflicts: xscreensaver-data-extra (<< 5.10-4)
 Replaces: xscreensaver-data-extra (<< 5.10-4)
-Description: BSOD hack from XScreenSaver
+Description: BSOD screen saver module from XScreenSaver
  This package ships the hack BSOD that shows the popular Blue Screens of Death
  from several OSes including BSD, Windows, Linux, Solaris, Apple and much more.
  .
