Fix misspelling of mirrorblob in debian/control
Detected with the new description-qa.sh of course :)

--- a/debian/control
+++ b/debian/control
@@ -101,7 +101,7 @@ Description: GL(Mesa) screen saver modules for screensaver frontends
  cubestorm, endgame, engine, flipflop, flipscreen3d, flyingtoasters,
  gears, gflux, glblur, glcells, gleidescope, glknots, glmatrix,
  glschool, glslideshow, glsnake, gltext, hypertorus, jigglypuff,
- lavalite, lockward, mirrorblog, moebius, moebiusgears, molecule,
+ lavalite, lockward, mirrorblob, moebius, moebiusgears, molecule,
  morph3d, pipes, polyhedra, polytopes, pulsar, queens, sierpinski3d,
  sonar, spheremonics, stonerview, superquadrics, topblock, voronoi.
  .
