Add texture width patch for quasicrystal
Also move it from xscreensaver-gl-extra to xscreensaver-gl
now that it behaves well on most hardware.

--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -151,7 +151,7 @@ providence	xscreensaver-gl-extra
 pulsar	xscreensaver-gl
 pyro	xscreensaver-data-extra
 qix	xscreensaver-data-extra
-quasicrystal	xscreensaver-gl-extra	"texture" error on Radeon
+quasicrystal	xscreensaver-gl
 queens	xscreensaver-gl
 rd-bomb	xscreensaver-data-extra
 ripples	xscreensaver-data
