--- a/debian/rules
+++ b/debian/rules
@@ -106,6 +106,7 @@ binary-arch:	build
 	sed -i '1s/6x/1/' debian/tmp/usr/share/man/man1/xscreensaver-gl-helper.1
 	sh debian/split-hacks.sh
 	dh_install -a
+	chmod +x debian/xscreensaver/usr/share/xscreensaver/xscreensaver-wrapper.sh
 	dh_installman -a
 	dh_installpam -a
 	dh_installmenu -a
