--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -73,6 +73,7 @@ fontglide	xscreensaver-data-extra
 fuzzyflakes	xscreensaver-data
 galaxy	xscreensaver-data
 gears	xscreensaver-gl
+geodesic	xscreensaver-gl	High CPU on Radeon
 gflux	xscreensaver-gl
 glblur	xscreensaver-gl
 glcells	xscreensaver-gl
