--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# Makefile.in --- xscreensaver, Copyright (c) 1999-2010 Jamie Zawinski.
+# Makefile.in --- xscreensaver, Copyright (c) 1999-2014 Jamie Zawinski.
 # the `../configure' script generates `Makefile' from this file.
 
 @SET_MAKE@
@@ -95,6 +95,7 @@ tar::
 # of autoconf other than the ones I've tried (2.12 and 2.13.)
 #
 configure::
+	aclocal
 	autoconf
 	autoheader
 	@TMP=configure.$$$$ ;						     \
@@ -373,7 +374,7 @@ www::
 									    \
   git commit -m "$$VERS" . ;						    \
   git tag -a "v$$VERS" -m "$$VERS" . ;					    \
-  git push . ;								    \
+  git push ;								    \
 
 
 count::
