Imported Upstream version 5.29

--- a/Makefile.in
+++ b/Makefile.in
@@ -373,7 +373,7 @@ www::
   fi ;									    \
 									    \
   git commit -m "$$VERS" . ;						    \
-  git tag -a "v$$VERS" -m "$$VERS" . ;					    \
+  git tag -a "v$$VERS" -m "$$VERS" ;					    \
   git push ;								    \
 
 
