Add new tessellimage and projectiveplane hacks

--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -148,6 +148,7 @@ polyominoes	xscreensaver-data-extra
 polytopes	xscreensaver-gl
 pong	xscreensaver-data-extra
 popsquares	xscreensaver-data	Do not ship .desktop file b/c conflict with gnome-screensaver
+projectiveplane	xscreensaver-gl
 providence	xscreensaver-gl-extra
 pulsar	xscreensaver-gl
 pyro	xscreensaver-data-extra
@@ -184,6 +185,7 @@ surfaces	xscreensaver-gl-extra
 superquadrics	xscreensaver-gl
 swirl	xscreensaver-data
 tangram	xscreensaver-gl-extra
+tessellimage	xscreensaver-data
 thornbird	xscreensaver-data-extra
 timetunnel	xscreensaver-gl-extra
 topblock	xscreensaver-gl
