--- a/debian/control
+++ b/debian/control
@@ -44,7 +44,7 @@ Description: Screen saver modules for screensaver frontends
  This is the selected set of non-GL screensavers shipped by default:
  abstractile, cwaves, deco, distort, fiberlamp, fuzzyflakes, galaxy,
  hexadrop, m6502, metaballs, penrose, ripples, shadebobs, slidescreen,
- swirl, xlyap.
+ swirl, tessellimage, xlyap.
  .
  More display modes can be found in xscreensaver-data-extra, xscreensaver-gl
  and xscreensaver-gl-extra packages.
@@ -102,9 +102,9 @@ Description: GL(Mesa) screen saver modules for screensaver frontends
  gears, gflux, glblur, glcells, gleidescope, glknots, glmatrix,
  glschool, glslideshow, glsnake, gltext, hypertorus, jigglypuff,
  kaleidocycle, lavalite, lockward, mirrorblob, moebius, moebiusgears,
- molecule, morph3d, pipes, polyhedra, polytopes, pulsar, quasicrystal,
- queens, sierpinski3d, sonar, spheremonics, stonerview, superquadrics,
- topblock, voronoi.
+ molecule, morph3d, pipes, polyhedra, polytopes, projectiveplane,
+ pulsar, quasicrystal, queens, sierpinski3d, sonar, spheremonics,
+ stonerview, superquadrics, topblock, voronoi.
  .
  More display modes can be found in the xscreensaver-data,
  xscreensaver-data-extra and xscreensaver-gl-extra packages.
