--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -200,6 +200,7 @@ voronoi	xscreensaver-gl
 wander	xscreensaver-data-extra
 webcollage	xscreensaver-screensaver-webcollage
 whirlwindwarp	xscreensaver-data-extra
+winduprobot	xscreensaver-gl
 wormhole	xscreensaver-data-extra
 xanalogtv	xscreensaver-data-extra
 xflame	xscreensaver-data-extra
